--- a/Cart.module.css
+++ b/Cart.module.css
@@ -10,7 +10,8 @@
     z-index: 30;
     text-align: center;
     overflow-y: scroll;
-    height: 500px;
+    height: auto;
+    max-height: 500px;
   }
 
   .delete {
@@ -20,11 +21,11 @@
     font-size: 20px;
     font-weight: bold;
   }
-
+  
   .title {
     text-align: center;
     font-size: 40px;
-    font-family: 'Times New Roman', Times, serif;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-weight: bold;
   }
 
@@ -33,23 +34,23 @@
     margin-top: 30px;
     /* justify-content: space-around; */
   }
-
+  
   .heading span {
     font-size: 20px;
     font-weight: bold;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   }
-
+  
   .item {
     flex-basis: 49%;
     text-align: center;
   }
-
+  
   .price {
     flex-basis: 15%;
     text-align: left;
   }
-
+  
   .quantity {
     flex-basis: 36%;
     text-align: left;
@@ -57,6 +58,7 @@
 
   .total {
     /* background-color: gray; */
+    margin-top: 40px;
     text-align: right;
   }
 
@@ -66,7 +68,7 @@
     font-weight: bold;
     font-family: 'Times New Roman', Times, serif;
   }
-
+  
   .total div {
     display: inline;
     margin: 0 40px 0 40px;
@@ -78,8 +80,9 @@
 
   .button {
     font-size: 25px;
+    padding: 5px;
     font-weight: bold;
-    background-color: aqua;
+    background-color: rgb(199, 73, 73);
     border-radius: 5px;
     margin-top: 30px;
   }
