--- a/Cart.module.css
+++ b/Cart.module.css
@@ -13,7 +13,7 @@
     height: auto;
     max-height: 500px;
   }
-
+  
   .delete {
     float: right;
     border: 2px solid gray;
@@ -28,7 +28,7 @@
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-weight: bold;
   }
-
+  
   .heading {
     display: flex;
     margin-top: 30px;
@@ -55,14 +55,14 @@
     flex-basis: 36%;
     text-align: left;
   }
-
+  
   .total {
     /* background-color: gray; */
     margin-top: 40px;
     text-align: right;
   }
 
-  .total span{
+  .total span {
     margin: 25px;
     font-size: 25px;
     font-weight: bold;
@@ -77,7 +77,7 @@
     background-color: #00d0ff;
     border-radius: 5px;
   }
-
+  
   .button {
     font-size: 25px;
     padding: 5px;
@@ -85,4 +85,15 @@
     background-color: rgb(199, 73, 73);
     border-radius: 5px;
     margin-top: 30px;
+  }
+
+  .delete {
+    padding: 0 20px 0 20px;
+    font-size: 30px;
+    border-radius: 5px;
+    background-color: #38f1b3;
+  }
+
+  .overlay button:active{
+    transform: scale(0.95);
   }
