--- a/About.module.css
+++ b/About.module.css
@@ -10,7 +10,43 @@
 .section img {
     height: 200px;
     width: 200px;
+
     float: left;
+
     border-radius: 50%;
+
     margin: 30px;
+
 }
+
+
+
+
+.section h1 {
+
+    margin: 0;
+
+    padding: 100px 0 20px 0;
+
+    background-color: gray;
+
+    font-size: 60px;
+
+    text-align: center;
+
+    font-family: 'Times New Roman', Times, serif;
+
+  }
+
+
+
+
+  .section h2 {
+
+    font-size: 40px;
+
+    font-family: 'Times New Roman', Times, serif;
+
+    text-align: center;
+
+  }
