--- a/Header.module.css
+++ b/Header.module.css
@@ -1,37 +1,40 @@
 .header {
-    display: flex;
-    position: fixed;
-    width: 100%;
-    align-items: center;
-    background-color: black;
-    padding: 20px;
-    border-bottom: 3px solid rgba(109, 219, 255, 0.854);
-    justify-content: center;
-    z-index:1;
-  }
-  
-  .header ul {
-    margin: 0;
-    padding: 0;
-  
-  }
-  
-  .header nav {
-    flex-basis: 85%;
-  }
-  
-  .header li {
-    color: white;
-    list-style: none;
-    display: inline;
-  }
+  display: flex;
+  position: fixed;
+  width: 100%;
+  align-items: center;
+  background-color: black;
+  padding: 20px;
+  border-bottom: 3px solid rgba(109, 219, 255, 0.854);
+  justify-content: center;
+  top:0%;
+  z-index:1;
+}
 
-  .header a{
-  text-decoration: none;
+.header ul {
+  margin: 0;
+  padding: 0;
+
+}
+
+.header nav {
+  flex-basis: 85%;
+}
+
+.header li {
   color: white;
-  margin: 0 100px 0 0;
-  padding: 30px 0 30px 0;
-  font-weight: bold;
-  font-size: 25px;
-  font-family: 'Times New Roman', Times, serif;
-  }
+  list-style: none;
+  display: inline;
+}
+.header a{
+text-decoration: none;
+color: white;
+margin: 0 100px 0 0;
+font-weight: bold;
+font-size: 25px;
+font-family: 'Times New Roman', Times, serif;
+}
+
+.header a.active {
+  border-bottom: 2px solid rgb(97, 218, 251);
+}
