--- a/Login.module.css
+++ b/Login.module.css
@@ -6,7 +6,7 @@
     text-align: center;
     font-family: 'Times New Roman', Times, serif;
   }
-
+  
   .form {
     margin: auto;
     border: 2px solid gray;
@@ -18,14 +18,14 @@
     box-shadow: 0 0 7px gray;
     border: none;
   }
-
+  
   .form label {
     display: block;
     font-size: 25px;
     font-weight: bold;
     font-family: 'Times New Roman', Times, serif;
   }
-
+  
   .form input {
     padding: 10px;
     margin-bottom: 1em;
@@ -34,11 +34,11 @@
     border-radius: 5px;
     border-color: rgb(0, 0, 0, 0.2);
   }
-
+  
   .form div {
     text-align: center;
   }
-
+  
   .form button {
     width: 100%;
     font-size: 25px;
@@ -49,11 +49,33 @@
     background-color: #ccc;
     /* box-shadow: 0 0 10px rgb(133, 255, 58); */
   }
-
+  
   .form button:hover {
     background-color: #00ff99;
   }
 
+
+
+
   .form button:active {
+
     transform: scale(0.95);
+
+  }
+
+
+
+
+  .form p {
+
+    margin: 20px;
+
+    margin-bottom: 0;
+
+    text-align: center;
+
+    color: purple;
+
+    cursor: pointer;
+
   }
