--- a/Header.module.css
+++ b/Header.module.css
@@ -4,11 +4,12 @@
   width: 100%;
   align-items: center;
   background-color: black;
-  padding: 20px;
-  border-bottom: 3px solid rgba(109, 219, 255, 0.854);
-
+  border-bottom: 3px solid #6ddbffda;
   top:0%;
   z-index:1;
+  padding: 10px;
+  justify-content: space-around;
+  column-gap: 20%;
 }
 
 .header ul {
@@ -22,7 +23,6 @@
 }
 
 .header li {
-  color: white;
   list-style: none;
   display: inline;
 }
@@ -34,11 +34,9 @@ font-weight: bold;
 font-size: 25px;
 font-family: 'Times New Roman', Times, serif;
 }
-
 .header a.active {
   border-bottom: 2px solid rgb(97, 218, 251);
 }
-
 .header li.login, li.logout {
   right: 10%;
 }
